--- a/FastlaneDemo/Info.plist
+++ b/FastlaneDemo/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.jesseblack.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>$(SCHEME_BUNDLE_ID)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
